# opencode-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  OPENCODE_API.md  README.md  bot.db  config.json  opencode-bot.service  opencode-bot.service.example  opencode.config.json  opencode.json  opencode.service  projects.json  pyproject.toml  requirements.txt  run_bot.sh  test_sse_logging.py
src/: bot_server.py  db.py  md2tgv2.py  model_picker.py  opencode_client.py  opencode_proxy.py  opencode_server.py  project_manager.py  session_manager.py  telegram_bot.py  transcription.py
